# wireguard-gui-rust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: org.wireguardgui.rust.manage.policy  wireguard-gui-rust.desktop
aur/: README.md
aur/wireguard-gui-rust/: PKGBUILD
aur/wireguard-gui-rust-bin/: PKGBUILD
docs/: PACKAGING.md
packaging/: DEB.md
packaging/appimage/: AppRun  build-appimage.sh
snap/: snapcraft.yaml
src/: app.rs  autostart.rs  error.rs  main.rs  notify.rs  public_ip.rs  settings.rs  single_instance.rs  stats.rs  tray.rs
src/config/: keygen.rs  mod.rs  profile.rs  qr_import.rs  store.rs
src/net/: allowed_ips.rs  boot.rs  killswitch.rs  mod.rs  nat.rs  netns.rs  privilege.rs  watchdog.rs
src/server/: e2e.rs  manage.rs  mod.rs
src/ui/: editor.rs  mod.rs  plan.rs  profile_list.rs  server.rs  settings.rs  status.rs  theme.rs
src/wg/: backend.rs  latency.rs  mod.rs  plan.rs  status.rs
