[package]
name = "wireguard-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Phase-0 spike deps (minimal). Full dep set added per-module in Phase 1.
iced = { version = "0.14.0", features = ["tokio"] }
ksni = { version = "0.3.5", features = ["blocking"] }
tokio = { version = "1", features = ["sync"] }
