[package]
name = "wireguard-gui"
version = "0.2.0"
edition = "2024"

# The GUI (default binary, from src/main.rs) and the root helper (src/bin/helper.rs).
# Declared explicitly so the helper's binary name is stable regardless of file name and so
# the GUI bin is not auto-shadowed once src/bin/ exists. The helper is the ONLY artifact that
# runs as root (via pkexec + polkit action org.wireguardgui.rust.manage); the GUI never does.
[[bin]]
name = "wireguard-gui"
path = "src/main.rs"

[[bin]]
name = "wireguard-gui-helper"
path = "src/bin/helper.rs"

[dependencies]
# GUI + tray (proven Phase-0 spike deps).
iced = { version = "0.14.0", features = ["image", "tokio"] }
# IMPORTANT: keep the "blocking" feature WITHOUT default-features=false — stripping defaults
# kills ksni's async backend and its own dbus_interface fails with ~26 type errors.
ksni = { version = "0.3.5", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "net", "sync", "io-util"] }

# Serialization (profiles, settings, status).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors.
thiserror = "1"

# Async trait objects (WgBackend).
async-trait = "0.1"

# Paths / file dialogs.
dirs = "5"
rfd = "0.15"

# Key generation.
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
rand = "0.8"

# Public IP fetch (blocking HTTP, run on a blocking task).
ureq = "2"

# QR codes for handing out server-generated client configs. `qrcode` renders the
# config text to an `image::Luma` buffer; `image` (png only) encodes it to PNG bytes
# that iced's `image` feature turns into an `image::Handle` for display.
qrcode = "0.14.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

# Smaller release binaries for packaging (a desktop utility; size > micro-perf).
# LTO intentionally omitted to keep build times reasonable; add later if size matters.
[profile.release]
opt-level = "s"
strip = true

[package.metadata.deb]
name = "wireguard-gui"
maintainer = "xthakila <https://github.com/xthakila/wireguard-gui-rust>"
copyright = "The wireguard-gui-rust contributors"
license-file = ["LICENSE-MIT", "4"]
extended-description = """\
WireGuard GUI is an unofficial graphical front-end for managing WireGuard
VPN tunnels on Linux. It lets you create, edit, and toggle tunnels without
touching the command line.

WireGuard is a registered trademark of Jason A. Donenfeld. This application
is not endorsed by or affiliated with Jason A. Donenfeld or the WireGuard
project.
"""
section = "net"
priority = "optional"
depends = "$auto, wireguard-tools"
recommends = "network-manager | openresolv | resolvconf"
assets = [
  # both binaries: the GUI on PATH, the root helper at the polkit-declared exec path
  ["target/release/wireguard-gui", "usr/bin/wireguard-gui", "755"],
  ["target/release/wireguard-gui-helper", "usr/lib/wireguard-gui/wireguard-gui-helper", "755"],
  # desktop entry + polkit action
  ["assets/wireguard-gui-rust.desktop", "usr/share/applications/wireguard-gui-rust.desktop", "644"],
  ["assets/org.wireguardgui.rust.manage.policy", "usr/share/polkit-1/actions/org.wireguardgui.rust.manage.policy", "644"],
  # hicolor icons
  ["assets/icons/hicolor/16x16/apps/wireguard-gui-rust.png", "usr/share/icons/hicolor/16x16/apps/wireguard-gui-rust.png", "644"],
  ["assets/icons/hicolor/32x32/apps/wireguard-gui-rust.png", "usr/share/icons/hicolor/32x32/apps/wireguard-gui-rust.png", "644"],
  ["assets/icons/hicolor/48x48/apps/wireguard-gui-rust.png", "usr/share/icons/hicolor/48x48/apps/wireguard-gui-rust.png", "644"],
  ["assets/icons/hicolor/64x64/apps/wireguard-gui-rust.png", "usr/share/icons/hicolor/64x64/apps/wireguard-gui-rust.png", "644"],
  ["assets/icons/hicolor/128x128/apps/wireguard-gui-rust.png", "usr/share/icons/hicolor/128x128/apps/wireguard-gui-rust.png", "644"],
  ["assets/icons/hicolor/256x256/apps/wireguard-gui-rust.png", "usr/share/icons/hicolor/256x256/apps/wireguard-gui-rust.png", "644"],
]
